<resources>
    <string name="app_name">D-bot</string>
    <string name="title_home">>> Home</string>
    <string name="title_profile">>> Profile</string>
    <string name="title_requests">>> Requests</string>
    <string name="title_services">>> Services</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_create_new_request">Create New Request</string>
    <string name="ad_signout_msg">Are you sure you want to sign out ?</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="msg_tv_enter_otp">Please enter 6 digit OTP that has been send to \n your mobile number</string>
    <string name="msg_tv_not_recived_otp_yet">Not recived OTP yet?</string>
    <string name="msg_tv_click_here_to_resend_otp"><u>Click here to resend OTP</u></string>
    <string name="txt_btn_verify_amp_continue"><![CDATA[Verify & Continue]]></string>
    <string name="txt_btn_send_otp">Send Otp</string>
    <string name="thank_you_for_signing_up_with_us">Thank you for signing up with us!</string>
    <string name="please_enter_the_following_details_nto_complete_the_sign_up">Please enter the following details \nto complete the sign up:</string>
    <string name="save">Save</string>
    <string name="get_your_site_documented_with_100_accuracy_in_just_1_day">Get your site documented with 100% accuracy, in just 1 day</string>
    <string name="by_continuing_you_agree_to_our_nterms_amp_conditions"><![CDATA[By continuing, You agree to our\nTerms & Conditions]]></string>

    <string name="TAG_NOTIFICATION_TOKEN">notify_token</string>
    <string name="TAG_OTP">otp</string>
    <string name="TAG_LOGIN_STATUS">login_status</string>
    <string name="TAG_CLIENT_DATA">data</string>
    <string name="TAG_CLIENT_ID">client_id</string>
    <string name="TAG_CLIENT_FULLNAME">fullname</string>
    <string name="TAG_CLIENT_PHONE">client_phone</string>
    <string name="TAG_CLIENT_EMAIL">client_email</string>
    <string name="TAG_CLIENT_COMPANY_NAME">company_name</string>
    <string name="TAG_CLIENT_COMPANY_PHONE">company_phone</string>
    <string name="TAG_CLIENT_COMPANY_EMAIL">company_email</string>
    <string name="TAG_CLIENT_CITY">client_city</string>
    <string name="TAG_FREELANCER">freelancer</string>

    <string name="rs_rupee">\u20A8</string>
    <string name="sample_rupee">\u20B9 2500</string>
    <string name="symbol_rupee">\u20B9</string>

    <string-array name="city_array">
        <item>Chennai</item>
        <item>Trichy</item>
        <item>Madurai</item>
        <item>Selam</item>
    </string-array>
    <string name="GOOGLE_MAP_API_KEY">AIzaSyBLN8m3OinLcUfOZVmptVwTJ0h7T834lx0</string>
    <string name="please_choose_a_serviceable_city_to_book">*Please choose a serviceable city to book.</string>
    <string name="btn_txt_continue">CONTINUE</string>
    <string name="btn_txt_save">SAVE</string>
    <string name="btn_txt_notify_me">NOTIFY ME</string>
    <string name="two_d_drawing_product_msg"><![CDATA[Floor plan and interior wall elevation drawing, delivered in CAD & PDF formats.]]></string>
    <string name="threesixty_product_msg">360 Photographs of all areas at site, delivered in JPEG/PNG formats.</string>
    <string name="three_d_model_product_msg">3D Model of the site. delivered in Sketchup &amp; Revit formats.</string>
    <string name="hello_dbot_co_in"><u>hello@dbot.co.in</u></string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="terms_and_conditions_title"><![CDATA[Terms & Conditions]]></string>
    <string name="popup_notify_msg">Hi !\n You have selected an unavailable slot, Your requuest has been received and we will notify you if your requested slot is available</string>
    <string name="popup_city_not_available_msg">Sorry !\n We are currently not operating in your City. We will notify you once we have launched there.</string>
    <string name="lorem_parag">Et aspernatur illum ut repellat quia ut ipsam exercitationem. Blanditiis maiores est atque iusto non dicta aliquam qui harum quia vel illum quasi et corrupti incidunt non aperiam iusto.</string>

    <string name="tv_cancel"><u>Cancel</u></string>
    <string name="tv_reshedule"><u>Reshedule</u></string>
    <string name="as_per_u_cancelation_amp_refund_policy_u">As per <u>Cancelation &amp; Refund policy</u></string>
    <string name="cancelation_and_refund_policy"><u>Cancelation &amp; Refund policy</u></string>

    <string name="msg_network_failed">N/W Connection Failed</string>
    <!--PayU-->
    <string name="some_error_occurred">Some error occurred...</string>
    <string name="transaction_cancelled_by_user">Transaction cancelled by user</string>
    <string name="package_details">PACKAGE DETAILS</string>
    <string name="pay_now">PAY NOW</string>
    <string name="payment_and_refund"><![CDATA[Payment & Refund]]></string>
    <string name="invite_msg_refer_earn">Invite your friends to try Dbot services and win a <b>FREE</b> documentaion service when they avail their first service.</string>
</resources>