<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.dbot.client.main.projects.ProjectsFragment"
        android:label=""
        tools:layout="@layout/fragment_projects" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dbot.client.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dbot.client.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_services"
        android:name="com.dbot.client.main.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" />
    <fragment
        android:id="@+id/navigation_new_request1"
        android:name="com.dbot.client.main.newrequest.Request1Fragment"
        android:label="@string/title_create_new_request"
        tools:layout="@layout/fragment_request1" />
    <fragment
        android:id="@+id/navigation_new_request2"
        android:name="com.dbot.client.main.newrequest.Request2Fragment"
        android:label="@string/title_create_new_request"
        tools:layout="@layout/fragment_request2" />
    <fragment
        android:id="@+id/navigation_new_request3"
        android:name="com.dbot.client.main.newrequest.Request3Fragment"
        android:label="@string/title_create_new_request"
        tools:layout="@layout/fragment_request3" />
    <fragment
        android:id="@+id/navigation_new_request_completed"
        android:name="com.dbot.client.main.newrequest.RequestCompletedFragment"
        android:label=""
        tools:layout="@layout/fragment_request_completed" />
    <fragment
        android:id="@+id/navigation_account_info"
        android:name="com.dbot.client.main.profile.account.AccountInfoFragment"
        android:label=""
        tools:layout="@layout/fragment_account_info" />
    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.dbot.client.main.profile.faq.FAQsFragment"
        android:label=""
        tools:layout="@layout/fragment_faqs" />
    <fragment
        android:id="@+id/navigation_refer"
        android:name="com.dbot.client.main.profile.refer.ReferFragment"
        android:label=""
        tools:layout="@layout/fragment_refer_earn" />
    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.dbot.client.main.profile.logout.LogoutFragment"
        android:label=""
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/navigation_project_details"
        android:name="com.dbot.client.main.projects.details.ProjectFullDetailsFragment"
        android:label=""
        tools:layout="@layout/fragment_project_details" />
    <fragment
        android:id="@+id/navigation_payment_refund"
        android:name="com.dbot.client.main.profile.pr.PrFragment"
        android:label=""
        tools:layout="@layout/fragment_pr" />
    <fragment
        android:id="@+id/navigation_refund_status"
        android:name="com.dbot.client.main.profile.pr.rs.RefundStatusFragment"
        android:label=""
        tools:layout="@layout/fragment_refund_status" />

</navigation>